Update MCM Helper e rev MCM desc

--- a/site-engenharia/css/estilo.css
+++ b/site-engenharia/css/estilo.css
@@ -141,7 +141,7 @@ margin-top: 20px;
 
 .formulario_nok {
     background-color: rgba(15, 3, 36, 0.05);
-    width: 100%;
+    width: 470px;
 }
 
 .botao_select {
