Revisado DOM do MCM WF

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -136,7 +136,7 @@ margin-top: 20px;
 
 .formulario_ok {
     background-color: rgba(46, 139, 86, 0.2);
-    width: 100%;
+    width: 470px;
 }
 
 .formulario_nok {
